# Prakticni_del

./: data.dvc  dvc.yaml  pyproject.toml
.dvc/: config
data/: raw.dvc
data/processed/: .gitignore  reference_dataset.csv
src/api/: app.py
src/data/: analyze_data_drift.py  process_data.py  validate_data.py
src/model/: train_eval.py
src/models/: dropout_model.joblib
src/notebooks/: notebook.ipynb  ucenje.ipynb
src/service/: app.py
